Initial attempt to address issue #274 Legend should not obscure map on mobile

--- a/app/src/frontend/legend.css
+++ b/app/src/frontend/legend.css
@@ -70,3 +70,11 @@
     padding: 0 0.5rem;
     opacity: 0.5;
 }
+.expander-button {
+    float: right;	
+}
+@media (min-height: 670px) {
+    .expander-button {
+        visibility: hidden;
+    }
+}
